--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,5 @@
 {
+    "read_save_json": true,
     "class_stats_mlp": {
         "Human": {
             "Archer": {
@@ -36,7 +37,7 @@
         }
     },
     "battling": {
-        "stat_turn": {
+        "effect_turn": {
             "//comment": "the turns used to eliminate the status",
             "poison_count": 4,
             "burn_count": 3,
@@ -46,10 +47,6 @@
             "//comment": "hp decreasing for a turn.",
             "poison_dec": 1,
             "burn_dec": 1.3
-        },
-        "stat_increase": {
-            "hp": 1,
-            "mp": 1
         }
     }
 }
